RESOLVED FIXED193066
Handle calc() expressions in gradient color stops
https://bugs.webkit.org/show_bug.cgi?id=193066
Summary Handle calc() expressions in gradient color stops
Simon Fraser (smfr)
Reported 2019-01-01 11:16:03 PST
Handle calc() expressions in gradient color stops
Attachments
Patch (8.08 KB, patch)
2019-01-01 11:19 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2019-01-01 11:19:19 PST
Simon Fraser (smfr)
Comment 2 2019-01-01 11:19:22 PST
WebKit Commit Bot
Comment 3 2019-01-02 11:24:58 PST
Comment on attachment 358172 [details] Patch Clearing flags on attachment: 358172 Committed r239571: <https://trac.webkit.org/changeset/239571>
WebKit Commit Bot
Comment 4 2019-01-02 11:24:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.