Handle calc() expressions in gradient color stops https://bugs.webkit.org/show_bug.cgi?id=193066 rdar://problem/46961985

Reviewed by Sam Weinig.
Source/WebCore:

Fix two issues that prevented calc() expressions from working in conic-gradient color stops,
for the angle or percent value. First, consumeAngleOrPercent() needs to look for CalculationCategory::Percent
calc values as well as angle ones.

Second, CSSPrimitiveValue::isAngle() needs to use primitiveType() (which takes calc into account),
just as isPx() etc do.

Test: fast/gradients/conic-calc-stop-position.html

* css/CSSPrimitiveValue.h:
(WebCore::CSSPrimitiveValue::isAngle const):
* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeAngleOrPercent):
(WebCore::CSSPropertyParserHelpers::consumeGradientColorStops):

LayoutTests:

* fast/gradients/conic-calc-stop-position-expected.html: Added.
* fast/gradients/conic-calc-stop-position.html: Added.


Canonical link: https://commits.webkit.org/207602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239571 268f45cc-cd09-0410-ab3c-d52691b4dbfc